# ascc

./: .gitignore  README.md  ascc.opam  dune-project
.github/workflows/: main.yml
lib/: dune  preprocessor.cmi  preprocessor.cmo  preprocessor.ml  preprocessor.mli  scanner.ml  scanner.mli  test.ml  utilities.ml  utilities.mli
test/: dune
